--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -1,25 +1,7 @@
 runner:
-  govet:
-    cmd: go vet $(go list ./... | grep -v /vendor/)
-    format: govet
-  staticcheck:
-    cmd: staticcheck $(go list ./... | grep -v /vendor/)
-    errorformat:
-      - "%f:%l:%c: %m"
-  revive:
-    cmd: revive -config=.revive.toml $(go list ./... | grep -v /vendor/)
+  golint:
+    cmd: golint $(go list ./... | grep -v /vendor/)
     format: golint
     level: warning
-  golangci:
-    cmd: golangci-lint run --out-format=line-number ./...
-    errorformat:
-      - '%E%f:%l:%c: %m'
-      - '%E%f:%l: %m'
-      - '%C%.%#'
-    level: warning
-  misspell:
-    cmd: misspell $(git ls-files)
-    errorformat:
-      - "%f:%l:%c: %m"
-  gosec:
-    cmd: gosec $(go list ./... | grep -v /vendor/)
+  govet:
+    cmd: go vet -all 
