--- a/.github/workflows/automatic-review.yml
+++ b/.github/workflows/automatic-review.yml
@@ -1,6 +1,7 @@
 name: reviewdog
 on: pull_request
-
+env:
+  REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.TEST2 }}
 jobs:
   reviewdog:
     name: reviewdog
